--- a/src/style.scss
+++ b/src/style.scss
@@ -4,9 +4,9 @@ body, html{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-family: "Roboto", sans-serif;
-  background: linear-gradient(to bottom, #e9dcf7 0%,#9281a5 40%,#53495e 100%);
+  background: linear-gradient(to bottom, #e9dcf7 0%,#9281a5 40%,#290c49 100%);
   height: 100%;
 }
 
@@ -16,5 +16,5 @@ p {
 }
 
 .active {
-  color: pink;
+  color: rgb(255, 46, 81);
 }
