fixed font size

--- a/src/containers/score_mobile/score_mobile.scss
+++ b/src/containers/score_mobile/score_mobile.scss
@@ -35,6 +35,8 @@ img {
   h3 {
     margin: 10px 0px 0px 0px;
     color: #fff500;
+    font-size: 36px;
+    line-height: 42px;
   }
 
   .final-score {
