--- a/src/containers/landingpage_mobile/landingpage_mobile.scss
+++ b/src/containers/landingpage_mobile/landingpage_mobile.scss
@@ -1,82 +1,200 @@
-body, html {
-    font-family: "Roboto", sans-serif;
-    background: linear-gradient(180deg, #B6E5FF 0%, rgba(255, 255, 255, 0) 100%), #42BBFF;    
-    width: 375px;
-    height: 812px;
-    left: 0px;
-    top: 0px;
-    color: white;
-}
-
-#mobileLanding-Wrapper {
-    position: absolute;
-    width: 333px;
-    height: 98px;
-    left: 22px;
-    top: 54px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 56px;
+.landing-page {
+    background: linear-gradient(180deg, #B6E5FF 0%, rgba(255, 255, 255, 0) 100%), #42BBFF;
+    height: 100vh;
     display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-#titlenLogo {
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 
-#landingLogo {
-
+h1 {
+    font-size: 48px;
 }
 
-.baseLogo {
-    position: absolute;
+img {
+    min-width: 0;
+    min-height: 0;
     width: 246px;
-    height: 209px;
-    left: 55px;
-    top: 195px;
-    background: url(../../img/gut-logo.svg);
+    height: auto;
 }
 
-#landingInputs {
-    text-align: center;
+
+.landing-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    input {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        -ms-appearance: none;
+        -o-appearance: none;
+        // source: https://stackoverflow.com/questions/12297600/how-to-remove-default-chrome-style-for-select-input
+        
+        box-sizing: border-box;
+        margin: 10px;
+        font-size: 24px;
+        width: 300px;
+        height: 30px;
+        color: white;
+        background: none;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        outline: none;
+    }
+    
+    input::placeholder {
+        color: white;
+    }
 }
+
 .roomcode-input{
-    position: absolute;
-    width: 324px;
-    height: 31px;
-    left: 25px;
-    font-size: 24px;
-    top: 531px;
     border-bottom: 4px solid #FFF500;
 
 }
 
 .playername-input {
-    position: absolute;
-    width: 324px;
-    height: 31px;
-    font-size: 24px;
-    left: 25px;
-    top: 574px;
     border-bottom: 4px solid #FFA800;
 }
 
-#join-game {
-    position: absolute;
-    width: 324px;
-    height: 71px;
-    left: 25px;
-    top: 719px;
+.join-game button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    
+    width: 300px;
+    height: 75px;
     font-size: 24px;
     line-height: 28px;
-    color: #2A3947;
-
 }
 
-#join-game-button {
-    position: absolute;
+.join-game a {
+    color: #2A3947;
+    text-decoration: none;
+}
+
+.join-game-button {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFA800 100%), #FFF500;
 }
+
+// .score-text {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     color: white;
+//     font-family: "Roboto", sans-serif;
+
+//     h1 {
+//         font-size: 48px;
+//         line-height: 56px;
+//         margin: 30px 0px 20px 0px;
+//         color: #fff500;
+//     }
+//     h2 {
+//         margin: 10px 0px 0px 0px;
+//         text-decoration: underline;
+//     }
+//     h3 {
+//         margin: 10px 0px 0px 0px;
+//         color: #fff500;
+//         font-size: 36px;
+//         line-height: 42px;
+//     }
+
+//     .final-score {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
+//     .rank {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//     }
+// }
+
+
+
+
+
+// .mobileLanding-Wrapper {
+//     width: 100vw;
+//     height: 100vh;
+//     background: linear-gradient(180deg, #B6E5FF 0%, rgba(255, 255, 255, 0) 100%), #42BBFF;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
+//     justify-content: center;
+// }
+
+// .titlenLogo {
+//     align-items: center;
+// }
+
+// .landingLogo {
+
+// }
+
+// .landingTitle {
+//     font-family: Roboto;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 48px;
+//     line-height: 56px;
+// }
+
+// .baseLogo {
+//     position: absolute;
+//     width: 246px;
+//     height: 209px;
+//     left: 55px;
+//     top: 195px;
+//     background: url(../../img/gut-logo.svg);
+// }
+
+// .landingInputs {
+//     text-align: center;
+// }
+// .roomcode-input{
+//     position: absolute;
+//     width: 324px;
+//     height: 31px;
+//     left: 25px;
+//     font-size: 24px;
+//     top: 531px;
+//     border-bottom: 4px solid #FFF500;
+
+// }
+
+// .playername-input {
+//     position: absolute;
+//     width: 324px;
+//     height: 31px;
+//     font-size: 24px;
+//     left: 25px;
+//     top: 574px;
+//     border-bottom: 4px solid #FFA800;
+// }
+
+// .join-game {
+//     position: absolute;
+//     width: 324px;
+//     height: 71px;
+//     left: 25px;
+//     top: 719px;
+//     font-size: 24px;
+//     line-height: 28px;
+//     color: #2A3947;
+
+// }
+
+// .join-game-button {
+//     position: absolute;
+//     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFA800 100%), #FFF500;
+// }
