--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,10 @@
 body, html{
   font-family: "Roboto", sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
+
+#main {
+  margin: 0px;
+  padding: 0px;
 }
