--- a/src/containers/landingpage_mobile/landingpage_mobile.scss
+++ b/src/containers/landingpage_mobile/landingpage_mobile.scss
@@ -1,6 +1,14 @@
+html, body {
+    height: 100vh;
+    width: 100vw;
+}
+
 .landing-page {
+    margin: 0;
+    padding: 0;
     background: linear-gradient(180deg, #B6E5FF 0%, rgba(255, 255, 255, 0) 100%), #42BBFF;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
