--- a/src/containers/waiting_mobile/waiting_mobile.scss
+++ b/src/containers/waiting_mobile/waiting_mobile.scss
@@ -1,18 +1,17 @@
-body, html {
-    font-family: "Roboto", sans-serif;
-    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #C2E9FF;    width: 375px;
-    height: 812px;
-    left: 0px;
-    top: 0px;
-    color: white;
-}
-
-
-#mobileWaiting-Wrapper {
+#mobile-waiting-page {
     display: flex;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #C2E9FF;    width: 375px;
+    font-family: "Roboto", sans-serif;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 60px 30px 60px 30px;// 20px 10px 20px;
 }
 
-#waiting-Joke {
+#waiting-joke {
     align-items: center;
     text-align: center;
     font-style: normal;
@@ -20,9 +19,14 @@ body, html {
     font-size: 36px;
     line-height: 42px;
     color: #2A3947;
+
+    h1 {
+        font-size: 36px;
+        text-align: center;
+    }
 }
 
-.baseLoading {
+.base-loading {
     position: absolute;
     width: 189px;
     height: 189px;
@@ -30,11 +34,15 @@ body, html {
     top: 279px;
 }
 
-#waiting-Info {
+#waiting-info {
     color: #000000;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
     line-height: 28px;
+    text-align: center;
 
+    h2 {
+        font-size: 24px;
+        text-align: center;
+    }
 }
