--- a/src/containers/vote_results/vote_results.scss
+++ b/src/containers/vote_results/vote_results.scss
@@ -1,1 +1,65 @@
 // to be added
+.vote_results{
+    background: linear-gradient(180deg, #86D3FF 0%, #FFFFFF 100%);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    #voteResults{
+
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 64px;
+        line-height: 75px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        #question{
+            h1{
+                color: #FFFFFF;
+            }
+        }
+
+        .img{
+            width:500px; 
+            height:10px; 
+            background-image:url('../../img/rainbow.png');
+            background-size: cover;
+            margin:0; 
+            padding:0; 
+        }
+    }
+
+    .player_answers{
+
+    }
+
+    #next_button{
+        #next_button_pic{
+
+            #triangle{
+                width: 0; 
+                height: 0; 
+                border-top: 60px solid transparent;
+                border-bottom: 60px solid transparent;
+                
+                border-left: 60px solid green;
+            }
+
+            #circle{
+                background: radial-gradient(42.00px at 50% 50%, #FFF500 0%, rgba(255, 168, 0, 0.55) 100%), #FFF500;
+            }
+
+        }
+
+        #button{
+           
+        }
+    }
+}
