--- a/src/containers/vote_results/vote_results.scss
+++ b/src/containers/vote_results/vote_results.scss
@@ -26,7 +26,7 @@
             }
         }
 
-        .img{
+        .rainbow{
             width:500px; 
             height:10px; 
             background-image:url('../../img/rainbow.png');
@@ -37,29 +37,84 @@
     }
 
     .player_answers{
+        background: #FF7A00;
+        border: 10px solid #FFFFFF;
+        margin-top: 30px;
+        width:300px; 
+        height:600px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
 
+        .answer {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .answer_player_img{
+            display: flex;
+            align-self: center;
+            width:75px; 
+            height:75px; 
+            background-image:url('../../img/p1.png');
+            background-size: cover;
+            margin:10px; 
+            padding:0; 
+        }
+
+        h1{
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 40px;
+            line-height: 56px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+
+            color: #2A3947;
+        }
+
+        .answers_voters{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: flex-end;
+            width: 100%;
+            height: 75px;
+
+            .voter_player_img1{
+                width:50px; 
+                height:50px; 
+                background-image:url('../../img/p1.png');
+                background-size: cover;
+                margin:5px; 
+                padding:0; 
+            }
+
+            .voter_player_img2{
+                width:50px; 
+                height:50px; 
+                background-image:url('../../img/p1.png');
+                background-size: cover;
+                margin:5px; 
+                padding:0; 
+            }
+        }
     }
 
     #next_button{
-        #next_button_pic{
-
-            #triangle{
-                width: 0; 
-                height: 0; 
-                border-top: 60px solid transparent;
-                border-bottom: 60px solid transparent;
-                
-                border-left: 60px solid green;
-            }
-
-            #circle{
-                background: radial-gradient(42.00px at 50% 50%, #FFF500 0%, rgba(255, 168, 0, 0.55) 100%), #FFF500;
-            }
-
-        }
-
-        #button{
-           
+        align-self: flex-end;
+       #button{
+            width:50px; 
+            height:50px; 
+            background-image:url('../../img/next.png');
+            background-size: cover;
+            margin:0; 
+            padding:0;  
+            border-radius: 35px;
         }
     }
 }
