added start_voting button and event

--- a/src/containers/answer_desktop/answer_desktop.scss
+++ b/src/containers/answer_desktop/answer_desktop.scss
@@ -22,12 +22,23 @@
     }
 
     h2{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
-    line-height: 50px;
-    color: #2A3947;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 48px;
+        line-height: 50px;
+        color: #2A3947;
+    }
+
+
+    h3{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 36px;
+        color: #2A3947;
+        margin: 0;
     }
 
     #dots{
