fixed styling on vote_result (i think)

--- a/src/containers/vote_results/vote_results.scss
+++ b/src/containers/vote_results/vote_results.scss
@@ -121,14 +121,16 @@
 
 .answer-container {
     display: flex;
-
+    flex-flow: row wrap;
+    width: 100%;
+    
     .answer-box {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
-        height: 70vh;
-        width: 30vw;
+        height: 60%;
+        width: 30%;
         border-style: solid;
         border-color: white;
         border-width: 5px;
